--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,16 +7,12 @@
             <h1><a href="https://www.alterdata.com.br/">Teste blog</a></h1>
         </div>
 
-        <div>
-            <p>publicado :0101100101011100</p>
-            <h2><a href="">my first post></a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus</p>
-        </div>
-
-        <div>
-            <p>publicado 01/02/201998</p>
-            <h2><a href="">minha segunda coisa</a></h2> 
-            <p>crazy train</p>
-        </div>
+        {% for post in posts %}
+            <div>
+                <p>published: {{ post.published_date }}</p>
+                <h1><a href="">{{post.title}}</a></h1>
+                <p>{{post.text|linebreaksbr}} </p>
+            </div>
+        {% endfor %}      
     </body>
 </html>
